force-app/main/default/objects/DOS__c/DOS__c.object-meta.xml
<CustomObject>
    <label>DOS</label>
    <nameField>
        <displayFormat>DN-{0000}</displayFormat>
        <label>DOS No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>