force-app/main/default/objects/DOS__c/fields/Document_Checklist_Value_Master__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Value_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Checklist Value Master</label>
    <referenceTo>Document_Checklist_Value_Master__c</referenceTo>
    <relationshipLabel>DOS</relationshipLabel>
    <relationshipName>DOS</relationshipName>
    <type>Lookup</type>
</CustomField>