force-app/main/default/objects/DOS__c/fields/Verification_Remarks_Observations__c.field-meta.xml
<CustomField>
    <fullName>Verification_Remarks_Observations__c</fullName>
    <label>Verification Remarks / Observations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>